# code_indexer

./: .gitignore  README.md  api.py  api_docs.md  app.py  build_best_practices.ipynb  build_doc.ipynb  code_indexer.py  github_pr_reader.py  pyproject.toml  requirements.txt  run_deepseek.sh  test_vector_search.py
code_graph/: __init__.py  builder.py  config.py  db_manager.py  models.py  relations.py
code_graph/embedders/: __init__.py  code.py  doc.py  openai_embedding.py
config/: database.ini
core/: __init__.py  models.py  parser.py
file_indexer/: README.md  __init__.py  database.py  embeddings.py  indexer.py  main.py  requirements.txt  scanner.py
knowledgebase/: best_practices.py  doc_builder.py  doc_model.py  doc_search.py  doc_spec.py  knowledge_graph.py  pr_reader.py
llm/: base.py  embedding.py  factory.py
llm/providers/: __init__.py  bedrock.py  deepseek.py  gemini.py  ollama.py  openai.py  openai_like.py
migrations/versions/: split_context_fields.py
parsers/: __init__.py
parsers/go/: __init__.py  parser.py
refinement/: llm.py
retrieval/: semantic.py
semantic_graph/: builder.py  builder.py.bak  db_manager.py  models.py
semantic_graph/embedders/: code.py  doc.py
setting/: base.py  db.py  embedding.py  fileindexer_llm.py
tests/: no_parser_test.py  simple_test_repo.py  test_code_graph_builder.py  test_core_models.py  test_go_parser.py  test_semantic_graph_builder.py  vector_search_test.py
tests/test_repo/: code_graph.json  main.go
tools/: README.md
tools/go/: go.mod
tools/go/analyzer/: ast_analyzer.go
tools/test/: main.go
utils/: json_utils.py  token.py
